--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ nav h1 {
 }
 
 .card {
-    background-color: #BCBCCE;
+    background-color: #EFF2F3;
     border-radius: 15px;
     border-radius: 8px;
     width: 300px;
